--- a/Cargo.toml
+++ b/Cargo.toml
@@ -183,10 +183,8 @@ zipf = "6.1.0"
 
 [patch.crates-io]
 # TODO: remove this when new raft-rs is published.
-#raft = { git = "https://github.com/tikv/raft-rs", branch = "master" }
-raft = { git = "https://github.com/tier-cap/raft-rs", branch = "oom-limit-leader-replication-debug-log" }
-#raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master" }
-raft-proto = { git = "https://github.com/tier-cap/raft-rs", branch = "oom-limit-leader-replication-debug-log" }
+raft = { git = "https://github.com/tikv/raft-rs", branch = "master" }
+raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master" }
 protobuf = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
 protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
 
@@ -209,7 +207,7 @@ procinfo = { git = "https://github.com/tikv/procinfo-rs", rev = "6599eb9dca74229
 # [patch.'https://github.com/pingcap/kvproto']
 # kvproto = {git = "https://github.com/your_github_id/kvproto", branch="your_branch"}
 [patch.'https://github.com/pingcap/kvproto']
-kvproto = {git = "https://github.com/tier-cap/kvproto.git", branch="add-reject-log-append-msg"}
+kvproto = { git = "https://github.com/tier-cap/kvproto.git", branch = "add-reject-log-append-msg" }
 
 [workspace]
 # See https://github.com/rust-lang/rfcs/blob/master/text/2957-cargo-features2.md
