--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
         with:
-          platforms: "linux/amd64,linux/arm64"
+          platforms: "linux/amd64"
 
       - name: Setup Docker Context
         run: |
@@ -54,7 +54,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: "linux/amd64,linux/arm64"
+          platforms: "linux/amd64"
           push: true
           build-args: |
             GITHUB_TOKEN=${{ secrets.GIT_ACTION_BOT }}
