--- a/components/tracker/Cargo.toml
+++ b/components/tracker/Cargo.toml
@@ -10,4 +10,5 @@ kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1"
 parking_lot = "0.12"
 pin-project = "1"
+prometheus = "0.13"
 slab = "0.4"
