--- a/components/tracker/Cargo.toml
+++ b/components/tracker/Cargo.toml
@@ -6,6 +6,7 @@ publish = false
 
 [dependencies]
 collections = { path = "../../components/collections" }
+crossbeam-utils = "0.8"
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1"
 parking_lot = "0.12"
