*: temporarily make cpu quota pace, cpu busy and healthy threshold configurable for test
Signed-off-by: BornChanger <dawn_catcher@126.com>

--- a/etc/config-template.toml
+++ b/etc/config-template.toml
@@ -63,6 +63,12 @@
 # max-delay-duration = "500ms"
 ## If quota auto tune for background request is supported
 # support-auto-tune = false
+## cpu quota tune pace
+# cpu-quota-pace = 1.0
+## cpu busy threshold
+# cpu-busy = 0.9
+## cpu healthy threshold
+# cpu-healthy = 0.75
 
 [log]
 ## Log levels: debug, info, warn, error, fatal.
