fix cargo test build
Signed-off-by: Evan Zhou <coocood@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,4 +61,6 @@ jobs:
         env:
           CARGO_INCREMENTAL: "0"
         working-directory: ./
-        run: cargo test --package cloud_server --package rfstore --package  rfengine --package kvengine --tests
+        run: |
+          cargo test -p rfstore -p rfengine -p kvengine --tests
+          cargo test -p tests --test cloud_engine
