raftstorev2: add basic layout
This is an attempt to reimplement raftstore using the new assumptions
that peer's range can be overlapped.

Currently, compatability is not considered, though we may think about
how to migrate from old version by the end of this year.

No concrete implementations is added yet, we may choose reuse
implementation from v1 or implementing new logic base on actual
requirement. The principle is do not introduce history debt while reusing
code as much as possible.

Signed-off-by: Jay Lee <BusyJayLee@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -247,6 +247,7 @@ members = [
   "components/panic_hook",
   "components/pd_client",
   "components/raftstore",
+  "components/raftstore-v2",
   "components/resolved_ts",
   "components/resource_metering",
   "components/server",
