--- a/tests/integrations/config/test-custom.toml
+++ b/tests/integrations/config/test-custom.toml
@@ -320,7 +320,7 @@ enable-doubly-skiplist = false
 enable-compaction-guard = false
 compaction-guard-min-output-file-size = "12MB"
 compaction-guard-max-output-file-size = "34MB"
-prepopulate-block-cache = true
+prepopulate-block-cache = "flush-only"
 format-version = 5
 checksum = "xxh3"
 
@@ -383,7 +383,7 @@ prop-keys-index-distance = 40000
 enable-compaction-guard = false
 compaction-guard-min-output-file-size = "12MB"
 compaction-guard-max-output-file-size = "34MB"
-prepopulate-block-cache = true
+prepopulate-block-cache = "flush-only"
 format-version = 5
 checksum = "xxh3"
 
@@ -432,7 +432,7 @@ prop-keys-index-distance = 40000
 enable-compaction-guard = true
 compaction-guard-min-output-file-size = "12MB"
 compaction-guard-max-output-file-size = "34MB"
-prepopulate-block-cache = true
+prepopulate-block-cache = "flush-only"
 format-version = 5
 checksum = "xxh3"
 
@@ -481,7 +481,7 @@ prop-keys-index-distance = 40000
 enable-compaction-guard = true
 compaction-guard-min-output-file-size = "12MB"
 compaction-guard-max-output-file-size = "34MB"
-prepopulate-block-cache = true
+prepopulate-block-cache = "flush-only"
 format-version = 5
 checksum = "xxh3"
 
@@ -563,7 +563,7 @@ prop-keys-index-distance = 40000
 enable-compaction-guard = true
 compaction-guard-min-output-file-size = "12MB"
 compaction-guard-max-output-file-size = "34MB"
-prepopulate-block-cache = true
+prepopulate-block-cache = "flush-only"
 format-version = 5
 checksum = "xxh3"
 
