--- a/.github/workflows/review-stats.yml
+++ b/.github/workflows/review-stats.yml
@@ -11,8 +11,8 @@ jobs:
       - name: Run pull request stats
         uses: flowwer-dev/pull-request-stats@master
         with:
+          organization: 'tikv'
           period: 7
-          charts: true
           disable-links: true
           sort-by: 'COMMENTS'
 
