--- a/components/kvengine/Cargo.toml
+++ b/components/kvengine/Cargo.toml
@@ -52,7 +52,8 @@ tikv_alloc = { path = "../tikv_alloc" }
 tikv_util = { path = "../tikv_util", default-features = false }
 tokio = { version = "1.5", features = ["full"] }
 txn_types = { path = "../txn_types", default-features = false }
-xorf = { version = "0.8", features = ["serde"] }
+# xorf = { version = "0.8", features = ["serde"] }
+xorf = { git = "https://github.com/youjiali1995/xorf", branch = "0.8.0-custom-serde", features = ["serde"] }
 zstd-sys = "1.6.3+zstd.1.5.2"
 
 [dependencies.rocksdb]
