--- a/components/engine_rocks/Cargo.toml
+++ b/components/engine_rocks/Cargo.toml
@@ -37,6 +37,7 @@ lazy_static = "1.4.0"
 log_wrappers = { path = "../log_wrappers" }
 num_cpus = "1"
 online_config = { path = "../online_config" }
+parking_lot_core = "0.9"
 prometheus = { version = "0.13", features = ["nightly"] }
 prometheus-static-metric = "0.5"
 protobuf = "2"
