components, etc, src: address xinye's comments
Signed-off-by: BornChanger <dawn_catcher@126.com>

--- a/etc/config-template.toml
+++ b/etc/config-template.toml
@@ -62,7 +62,7 @@
 ## Limitation of max delay duration, default value is 0 which means unlimited.
 # max-delay-duration = "500ms"
 ## If quota auto tune for background request is supported
-# support-auto-tune = false
+# enable-auto-tune = false
 
 [log]
 ## Log levels: debug, info, warn, error, fatal.
