kvengine: support s3 dynamic credential provider (#85)
Signed-off-by: Evan Zhou <coocood@gmail.com>

--- a/components/kvengine/Cargo.toml
+++ b/components/kvengine/Cargo.toml
@@ -13,6 +13,7 @@ protobuf-codec = [
 
 [dependencies]
 async-trait = "0.1"
+aws = { path = "../cloud/aws" }
 bincode = "1.3"
 byteorder = "1.2"
 bytes = "1.0"
