Squashed commit of the following:
commit 900dd036829662f4e88d31fc66fc3aada09a9924
Merge: 9fda7293d 8eceb1f77
Author: Zak Zhao <57036248+joccau@users.noreply.github.com>
Date:   Thu Jun 23 12:12:48 2022 +0800

    Merge pull request #9 from joccau/fix-limit-fluent

    log-backup: limit concurrent fluent when write kv-files to storage

commit 8eceb1f77fdabcbd78c10b8ea6cbe3705147205e
Author: joccau <zak.zhao@pingcap.com>
Date:   Thu Jun 23 11:21:20 2022 +0800

    move local variables to const

    Signed-off-by: joccau <zak.zhao@pingcap.com>

commit 4465085c6fff669ece10f096081aea5ba698c577
Author: joccau <zak.zhao@pingcap.com>
Date:   Wed Jun 22 16:40:48 2022 +0800

    add unit test

    Signed-off-by: joccau <zak.zhao@pingcap.com>

commit 8ef93a151bcb3ec54705a47e1ee9b2e56c0f9b39
Author: joccau <zak.zhao@pingcap.com>
Date:   Wed Jun 22 00:37:46 2022 +0800

    limit the fluent when write kv file, ref issues#12869

    Signed-off-by: joccau <zak.zhao@pingcap.com>

commit 9fda7293db13eb2441a3814609d7a48b0c140cae
Merge: d219d8458 acc06c377
Author: Zak Zhao <57036248+joccau@users.noreply.github.com>
Date:   Wed Jun 15 17:28:24 2022 +0800

    Merge pull request #8 from YuJuncen/update-max-ts

    log_backup: update max ts

commit acc06c377dfc2a74820f05761472e1a1f4f667fc
Author: Yu Juncen <yujuncen@pingcap.com>
Date:   Wed Jun 15 16:37:33 2022 +0800

    *: update max ts

    Signed-off-by: Yu Juncen <yujuncen@pingcap.com>

commit d219d8458de25b658629d283c9cc03e218f8e694
Merge: baf35ea5c e6d1dfe8f
Author: Zak Zhao <57036248+joccau@users.noreply.github.com>
Date:   Wed Jun 15 13:50:32 2022 +0800

    Merge pull request #7 from WangLe1321/feat/br_stream_metric

    br: remove metrics after task stopped

commit e6d1dfe8fc0aa298fcc0a3e328d858e17616b2a1
Author: WangLe1321 <wangle1321@163.com>
Date:   Tue Jun 14 17:55:47 2022 +0800

    br: modify to recieve returned value

commit 9b1c10148ec0fa457346ceafff682cf41dd5777f
Author: WangLe1321 <wangle1321@163.com>
Date:   Tue Jun 

--- a/components/backup-stream/Cargo.toml
+++ b/components/backup-stream/Cargo.toml
@@ -29,7 +29,7 @@ dashmap = "5"
 engine_rocks = { path = "../engine_rocks", default-features = false }
 engine_traits = { path = "../engine_traits", default-features = false }
 error_code = { path = "../error_code" }
-etcd-client = { version = "0.7", features = ["pub-response-field"] }
+etcd-client = { version = "0.7", features = ["pub-response-field", "tls"] }
 external_storage = { path = "../external_storage", default-features = false }
 external_storage_export = { path = "../external_storage/export", default-features = false }
 fail = { version = "0.5", optional = true }
@@ -59,6 +59,7 @@ tikv_util = { path = "../tikv_util" }
 tokio = { version = "1.5", features = ["rt-multi-thread", "macros", "time", "sync"] }
 tokio-stream = "0.1"
 tokio-util = { version = "0.7", features = ["compat"] } 
+tonic = "0.5"
 txn_types = { path = "../txn_types", default-features = false }
 uuid = "0.8"
 yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
@@ -70,6 +71,7 @@ grpcio = { version = "0.10", default-features = false, features = ["openssl-vend
 hex = "0.4"
 rand = "0.8.0"
 tempdir = "0.3"
+tempfile = "3.0"
 test_raftstore = { path = "../test_raftstore", default-features = false }
 test_util = { path = "../test_util", default-features = false }
 url = "2"
