--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -1,5 +1,5 @@
 [profile.ci]
-retries = 0
+retries = 2 # Run at most 3 times
 fail-fast = false
 slow-timeout = { period = "60s", terminate-after = 2 }
 
