--- a/components/server/Cargo.toml
+++ b/components/server/Cargo.toml
@@ -57,6 +57,7 @@ grpcio-health = { version = "0.10", default-features = false, features = ["proto
 hex = "0.4"
 keys = { path = "../keys", default-features = false }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
+lazy_static = "1.3"
 libc = "0.2"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
 log_wrappers = { path = "../log_wrappers" }
@@ -70,7 +71,8 @@ rand = "0.8"
 resolved_ts = { path = "../../components/resolved_ts", default-features = false }
 resource_metering = { path = "../resource_metering" }
 security = { path = "../security", default-features = false, features = ["tonic"] }
-serde_json = "1.0"
+serde = "1.0"
+serde_json = { version = "1.0", features = ["preserve_order"] }
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 tempfile = "3.0"
@@ -81,6 +83,9 @@ tokio = { version = "1.5", features = ["rt-multi-thread"] }
 toml = "0.5"
 txn_types = { path = "../txn_types", default-features = false }
 yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
+
+[dev-dependencies]
+serde = { version = "1.0", features = ["derive"] }
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3"
