--- a/components/backup/Cargo.toml
+++ b/components/backup/Cargo.toml
@@ -73,6 +73,7 @@ tokio = { version = "1.5", features = ["rt-multi-thread"] }
 tokio-stream = "0.1"
 txn_types = { path = "../txn_types", default-features = false }
 yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
+aws = { path = "../cloud/aws" }
 
 [dev-dependencies]
 rand = "0.8"
