add memtable sealed counter
Signed-off-by: 5kbpers <hustmh@gmail.com>

--- a/components/engine_rocks/Cargo.toml
+++ b/components/engine_rocks/Cargo.toml
@@ -54,6 +54,7 @@ tikv_util = { path = "../tikv_util", default-features = false }
 time = "0.1"
 tracker = { path = "../tracker" }
 txn_types = { path = "../txn_types", default-features = false }
+backtrace = "0.3"
 
 [dependencies.rocksdb]
 git = "https://github.com/5kbpers/rust-rocksdb.git"
