--- a/components/causal_ts/Cargo.toml
+++ b/components/causal_ts/Cargo.toml
@@ -30,4 +30,4 @@ tokio = { version = "1", features = ["sync"] }
 txn_types = { path = "../txn_types", default-features = false }
 
 [dev-dependencies]
-test_raftstore = { path = "../test_raftstore", default-features = false }
+test_raftstore = { path = "../test_raftstore" }
