--- a/components/tidb_query_executors/Cargo.toml
+++ b/components/tidb_query_executors/Cargo.toml
@@ -25,6 +25,7 @@ tidb_query_expr = { path = "../tidb_query_expr", default-features = false }
 tikv_util = { path = "../tikv_util", default-features = false }
 tipb = { git = "https://github.com/pingcap/tipb.git" }
 yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
+tikv_alloc = { path = "../tikv_alloc" }
 
 [dev-dependencies]
 anyhow = "1.0"
