--- a/mock-engine-store/Cargo.toml
+++ b/mock-engine-store/Cargo.toml
@@ -23,6 +23,7 @@ fail = "0.5"
 keys = { path = "../components/keys", default-features = false }
 kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
 protobuf = "2.8.0"
+proxy_server = { path = "../components/proxy_server" }
 raftstore = { path = "../components/raftstore", default-features = false }
 server = { path = "../components/server" }
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
