--- a/etc/config-template.toml
+++ b/etc/config-template.toml
@@ -1102,8 +1102,8 @@
 [security.encryption]
 ## Encryption method to use for data files.
 ## Possible values are "plaintext", "aes128-ctr", "aes192-ctr", "aes256-ctr" and "sm4-ctr".
-## Value other than "plaintext" means encryption is enabled,
-## in which case master key must be specified.
+## Value other than "plaintext" means encryption is enabled, in which case
+## master key must be specified.
 # data-encryption-method = "plaintext"
 
 ## Specifies how often TiKV rotates data encryption key.
