--- a/Cargo.toml
+++ b/Cargo.toml
@@ -295,11 +295,11 @@ opt-level = 1
 
 [profile.dev.package.tests]
 debug = 1
-opt-level = 0
+opt-level = 1
 
 [profile.dev]
 opt-level = 0
-debug = true
+debug = 0
 codegen-units = 4
 lto = false
 incremental = true
@@ -325,7 +325,7 @@ codegen-units = 4
 
 [profile.test]
 opt-level = 0
-debug = true
+debug = 0
 codegen-units = 16
 lto = false
 incremental = true
