--- a/components/batch-system/Cargo.toml
+++ b/components/batch-system/Cargo.toml
@@ -16,6 +16,7 @@ file_system = { path = "../file_system", default-features = false }
 lazy_static = "1.3"
 online_config = { path = "../online_config" }
 prometheus = { version = "0.13", default-features = false, features = ["nightly"] }
+prometheus-static-metric = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
