simple batch system parallel apply without considering constraints
Signed-off-by: cfzjywxk <lsswxrxr@163.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -294,12 +294,12 @@ debug = false
 opt-level = 1
 
 [profile.dev.package.tests]
-debug = 1
-opt-level = 1
+debug = true
+opt-level = 0
 
 [profile.dev]
 opt-level = 0
-debug = 0
+debug = true
 codegen-units = 4
 lto = false
 incremental = true
@@ -325,7 +325,7 @@ codegen-units = 4
 
 [profile.test]
 opt-level = 0
-debug = 0
+debug = true
 codegen-units = 16
 lto = false
 incremental = true
