--- a/components/engine_rocks/Cargo.toml
+++ b/components/engine_rocks/Cargo.toml
@@ -54,10 +54,10 @@ time = "0.1"
 txn_types = { path = "../txn_types", default-features = false }
 
 [dependencies.rocksdb]
-git = "https://github.com/tikv/rust-rocksdb.git"
+git = "https://github.com/ethercflow/rust-rocksdb.git"
 package = "rocksdb"
 features = ["encryption"]
-branch = "tikv-6.1"
+branch = "tikv-6.1-opt"
 
 [dev-dependencies]
 rand = "0.8"
