--- a/components/engine_rocks/Cargo.toml
+++ b/components/engine_rocks/Cargo.toml
@@ -57,9 +57,10 @@ txn_types = { path = "../txn_types", default-features = false }
 backtrace = "0.3"
 
 [dependencies.rocksdb]
-git = "https://github.com/tikv/rust-rocksdb.git"
+git = "https://github.com/5kbpers/rust-rocksdb.git"
 package = "rocksdb"
 features = ["encryption"]
+branch = "multi-batch-seqno"
 
 [dev-dependencies]
 rand = "0.8"
