--- a/components/engine_rocks/Cargo.toml
+++ b/components/engine_rocks/Cargo.toml
@@ -58,6 +58,7 @@ txn_types = { path = "../txn_types", default-features = false }
 git = "https://github.com/tikv/rust-rocksdb.git"
 package = "rocksdb"
 features = ["encryption"]
+branch = "tikv-6.1"
 
 [dev-dependencies]
 rand = "0.8"
