--- a/tests/integrations/config/test-custom.toml
+++ b/tests/integrations/config/test-custom.toml
@@ -320,9 +320,6 @@ enable-doubly-skiplist = false
 enable-compaction-guard = false
 compaction-guard-min-output-file-size = "12MB"
 compaction-guard-max-output-file-size = "34MB"
-prepopulate-block-cache = "flush-only"
-format-version = 5
-checksum = "xxh3"
 
 [rocksdb.defaultcf.titan]
 min-blob-size = "2018B"
@@ -331,6 +328,7 @@ blob-cache-size = "12GB"
 min-gc-batch-size = "12KB"
 max-gc-batch-size = "12MB"
 discardable-ratio = 0.00156
+sample-ratio = 0.982
 merge-small-file-threshold = "21KB"
 blob-run-mode = "fallback"
 level-merge = true
@@ -382,9 +380,6 @@ prop-keys-index-distance = 40000
 enable-compaction-guard = false
 compaction-guard-min-output-file-size = "12MB"
 compaction-guard-max-output-file-size = "34MB"
-prepopulate-block-cache = "flush-only"
-format-version = 5
-checksum = "xxh3"
 
 [rocksdb.lockcf]
 block-size = "12KB"
@@ -431,9 +426,6 @@ prop-keys-index-distance = 40000
 enable-compaction-guard = true
 compaction-guard-min-output-file-size = "12MB"
 compaction-guard-max-output-file-size = "34MB"
-prepopulate-block-cache = "flush-only"
-format-version = 5
-checksum = "xxh3"
 
 [rocksdb.raftcf]
 block-size = "12KB"
@@ -480,9 +472,6 @@ prop-keys-index-distance = 40000
 enable-compaction-guard = true
 compaction-guard-min-output-file-size = "12MB"
 compaction-guard-max-output-file-size = "34MB"
-prepopulate-block-cache = "flush-only"
-format-version = 5
-checksum = "xxh3"
 
 [raftdb]
 wal-recovery-mode = "skip-any-corrupted-records"
@@ -562,9 +551,6 @@ prop-keys-index-distance = 40000
 enable-compaction-guard = true
 compaction-guard-min-output-file-size = "12MB"
 compaction-guard-max-output-file-size = "34MB"
-prepopulate-block-cache = "flush-only"
-format-version = 5
-checksum = "xxh3"
 
 [raftdb.defaultcf.titan]
 min-blob-size = "2018B"
@@ -573,6 +559,7 @@ blob-cache-size = "12GB"
 min-gc-batch-size = "12KB"
 max-gc-batch-size = "12MB"
 discardable-ratio = 0.00156
+sample-ratio = 0.982
 merge-small-file-threshold = "21KB"
 blob-run-mode = "fallback"
 level-merge = true
