add simple random test and fix related bugs (#144)
* add simple random test and fix related bugs

Signed-off-by: Evan Zhou <coocood@gmail.com>

--- a/components/kvengine/Cargo.toml
+++ b/components/kvengine/Cargo.toml
@@ -55,7 +55,7 @@ tokio = { version = "1.5", features = ["full"] }
 txn_types = { path = "../txn_types", default-features = false }
 # xorf = { version = "0.8", features = ["serde"] }
 xorf = { git = "https://github.com/youjiali1995/xorf", branch = "0.8.0-custom-serde", features = ["serde"] }
-zstd-sys = "1.6.3+zstd.1.5.2"
+zstd-sys = "1.6.3"
 
 [dependencies.rocksdb]
 git = "https://github.com/tikv/rust-rocksdb.git"
