--- a/Cargo.toml
+++ b/Cargo.toml
@@ -104,7 +104,7 @@ hyper-tls = "0.5"
 into_other = { path = "components/into_other", default-features = false }
 itertools = "0.10"
 keys = { path = "components/keys", default-features = false }
-kvproto = { git = "https://github.com/ekexium/kvproto.git", branch = "pessimistic-lock-type" }
+kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.3"
 libc = "0.2"
 libloading = "0.7"
@@ -206,8 +206,8 @@ procinfo = { git = "https://github.com/tikv/procinfo-rs", rev = "6599eb9dca74229
 # When you modify TiKV cooperatively with kvproto, this will be useful to submit the PR to TiKV and the PR to
 # kvproto at the same time.
 # After the PR to kvproto is merged, remember to comment this out and run `cargo update -p kvproto`.
-# [patch.'https://github.com/pingcap/kvproto']
-# kvproto = {git = "https://github.com/your_github_id/kvproto", branch="your_branch"}
+[patch.'https://github.com/pingcap/kvproto']
+kvproto = {git = "https://github.com/ekexium/kvproto", branch="pessimistic-lock-type"}
 
 [workspace]
 # See https://github.com/rust-lang/rfcs/blob/master/text/2957-cargo-features2.md
