--- a/components/api_version/Cargo.toml
+++ b/components/api_version/Cargo.toml
@@ -11,7 +11,7 @@ testexport = []
 bitflags = "1.0.1"
 codec = { path = "../codec", default-features = false }
 engine_traits = { path = "../engine_traits", default-features = false }
-kvproto = { git = "https://github.com/ekexium/kvproto.git", branch = "pessimistic-lock-type" }
+kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 match_template = { path = "../match_template" }
 thiserror = "1.0"
 tikv_alloc = { path = "../tikv_alloc" }
