--- a/components/engine_rocks_helper/Cargo.toml
+++ b/components/engine_rocks_helper/Cargo.toml
@@ -23,5 +23,5 @@ tikv_util = { path = "../tikv_util", default-features = false }
 
 [dev-dependencies]
 engine_test = { path = "../engine_test" }
-kvproto = { git = "https://github.com/ekexium/kvproto.git", branch = "pessimistic-lock-type", default-features = false }
+kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
 tempfile = "3.0"
