--- a/components/external_storage/Cargo.toml
+++ b/components/external_storage/Cargo.toml
@@ -28,7 +28,7 @@ futures-executor = "0.3"
 futures-io = "0.3"
 futures-util = { version = "0.3", default-features = false, features = ["io"] }
 grpcio = { version = "0.10", optional = true, default-features = false, features = ["openssl-vendored"] }
-kvproto = { git = "https://github.com/ekexium/kvproto.git", branch = "pessimistic-lock-type" }
+kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.3"
 libloading = { optional = true, version = "0.7.0" }
 openssl = "0.10"
