--- a/components/raftstore-v2/Cargo.toml
+++ b/components/raftstore-v2/Cargo.toml
@@ -36,7 +36,7 @@ engine_traits = { path = "../engine_traits" }
 error_code = { path = "../error_code" }
 fail = "0.5"
 futures-util = { version = "0.3", features = ["compat"] }
-kvproto = { git = "https://github.com/ekexium/kvproto.git", branch = "pessimistic-lock-type" }
+kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 pd_client = { path = "../pd_client" }
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
 raft-proto = { version = "0.7.0" }
