--- a/components/test_backup/Cargo.toml
+++ b/components/test_backup/Cargo.toml
@@ -23,7 +23,7 @@ futures = "0.3"
 futures-executor = "0.3"
 futures-util = { version = "0.3", default-features = false, features = ["io"] }
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
-kvproto = { git = "https://github.com/ekexium/kvproto.git", branch = "pessimistic-lock-type" }
+kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 protobuf = "2"
 rand = "0.8"
 tempfile = "3.0"
