--- a/components/test_storage/Cargo.toml
+++ b/components/test_storage/Cargo.toml
@@ -24,7 +24,7 @@ test-engines-panic = [
 api_version = { path = "../api_version" }
 collections = { path = "../collections" }
 futures = "0.3"
-kvproto = { git = "https://github.com/ekexium/kvproto.git", branch = "pessimistic-lock-type" }
+kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 pd_client = { path = "../pd_client", default-features = false }
 raftstore = { path = "../raftstore", default-features = false }
 test_raftstore = { path = "../test_raftstore", default-features = false }
