--- a/components/test_util/Cargo.toml
+++ b/components/test_util/Cargo.toml
@@ -16,7 +16,7 @@ collections = { path = "../collections" }
 encryption_export = { path = "../encryption/export", default-features = false }
 fail = "0.5"
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
-kvproto = { git = "https://github.com/ekexium/kvproto.git", branch = "pessimistic-lock-type" }
+kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 rand = "0.8"
 rand_isaac = "0.3"
 security = { path = "../security", default-features = false }
