raftstore: make `UNREACHABLE_BACKOFF` configurable (#13193)
close tikv/tikv#13054

make `UNREACHABLE_BACKOFF` configurable.

Signed-off-by: 5kbpers <hustmh@gmail.com>

--- a/tests/integrations/config/test-custom.toml
+++ b/tests/integrations/config/test-custom.toml
@@ -182,6 +182,7 @@ future-poll-size = 2
 hibernate-regions = false
 dev-assert = true
 perf-level = 5
+unreachable-backoff = "111s"
 
 [coprocessor]
 split-region-on-table = false
