--- a/Cargo.toml
+++ b/Cargo.toml
@@ -104,7 +104,7 @@ hyper-tls = "0.5"
 into_other = { path = "components/into_other", default-features = false }
 itertools = "0.10"
 keys = { path = "components/keys", default-features = false }
-kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_data_file_info_v2" }
+kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_merged_file_info" }
 lazy_static = "1.3"
 libc = "0.2"
 libloading = "0.7"
