--- a/components/backup-stream/Cargo.toml
+++ b/components/backup-stream/Cargo.toml
@@ -19,6 +19,7 @@ test = true
 harness = true
 
 [dependencies]
+async-compression = { version = "0.3.14", features = ["tokio", "zstd"] }
 async-trait = { version = "0.1" }
 bytes = "1"
 chrono = "0.4"
@@ -39,7 +40,7 @@ futures-io = "0.3"
 
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
 hex = "0.4"
-kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_data_file_info_v2" }
+kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_merged_file_info" }
 lazy_static = "1.4"
 log_wrappers = { path = "../log_wrappers" }
 online_config = { path = "../online_config" }
@@ -65,7 +66,6 @@ tonic = "0.5"
 txn_types = { path = "../txn_types", default-features = false }
 uuid = "0.8"
 yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
-async-compression = { version = "0.3.14", features = ["tokio", "zstd"]}
 
 [dev-dependencies]
 async-trait = "0.1"
