--- a/components/backup/Cargo.toml
+++ b/components/backup/Cargo.toml
@@ -52,7 +52,7 @@ futures-util = { version = "0.3", default-features = false, features = ["io"] }
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
 hex = "0.4"
 keys = { path = "../keys", default-features = false }
-kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_data_file_info_v2" }
+kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_merged_file_info" }
 lazy_static = "1.3"
 log_wrappers = { path = "../log_wrappers" }
 online_config = { path = "../online_config" }
