--- a/components/cloud/aws/Cargo.toml
+++ b/components/cloud/aws/Cargo.toml
@@ -21,7 +21,7 @@ grpcio = { version = "0.10",  default-features = false, features = ["openssl-ven
 http = "0.2.0"
 hyper = "0.14"
 hyper-tls = "0.5"
-kvproto = { git = "https://github.com/leavrth/kvproto.git", branch="br_data_file_info_v2" }
+kvproto = { git = "https://github.com/leavrth/kvproto.git", branch="br_merged_file_info" }
 rusoto_core = "0.46.0"
 rusoto_credential = "0.46.0"
 rusoto_kms = { version = "0.46.0", features = ["serialize_structs"] }
