--- a/components/encryption/Cargo.toml
+++ b/components/encryption/Cargo.toml
@@ -21,7 +21,7 @@ file_system = { path = "../file_system", default-features = false }
 futures = "0.3"
 futures-util = { version = "0.3", default-features = false, features = ["std", "io"] }
 hex = "0.4.2"
-kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_data_file_info_v2" }
+kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_merged_file_info" }
 lazy_static = "1.3"
 online_config = { path = "../online_config" }
 openssl = "0.10"
