--- a/components/encryption/export/Cargo.toml
+++ b/components/encryption/export/Cargo.toml
@@ -18,7 +18,7 @@ derive_more = "0.99.3"
 encryption = { path = "../", default-features = false }
 error_code = { path = "../../error_code", default-features = false }
 file_system = { path = "../../file_system", default-features = false }
-kvproto = { git = "https://github.com/leavrth/kvproto.git", branch="br_data_file_info_v2" }
+kvproto = { git = "https://github.com/leavrth/kvproto.git", branch="br_merged_file_info" }
 openssl = "0.10"
 protobuf = { version = "2.8", features = ["bytes"] }
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
