--- a/components/engine_traits/Cargo.toml
+++ b/components/engine_traits/Cargo.toml
@@ -12,7 +12,7 @@ case_macros = { path = "../case_macros" }
 error_code = { path = "../error_code", default-features = false }
 fail = "0.5"
 file_system = { path = "../file_system", default-features = false }
-kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_data_file_info_v2" }
+kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_merged_file_info" }
 log_wrappers = { path = "../log_wrappers" }
 protobuf = "2"
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
