--- a/components/external_storage/Cargo.toml
+++ b/components/external_storage/Cargo.toml
@@ -16,6 +16,7 @@ cloud-storage-grpc = [
 failpoints = ["fail/failpoints"]
 
 [dependencies]
+async-compression = { version = "0.3.14", features = ["futures-io", "zstd"] }
 async-trait = "0.1"
 bytes = "1.0"
 encryption = { path = "../encryption" }
@@ -28,7 +29,7 @@ futures-executor = "0.3"
 futures-io = "0.3"
 futures-util = { version = "0.3", default-features = false, features = ["io"] }
 grpcio = { version = "0.10", optional = true, default-features = false, features = ["openssl-vendored"] }
-kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_data_file_info_v2" }
+kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_merged_file_info" }
 lazy_static = "1.3"
 libloading = { optional = true, version = "0.7.0" }
 openssl = "0.10"
@@ -44,7 +45,6 @@ tikv_util = { path = "../tikv_util", default-features = false }
 tokio = { version = "1.5", features = ["time", "fs", "process"] }
 tokio-util = { version = "0.7", features = ["compat"] }
 url = "2.0"
-async-compression = { version = "0.3.14", features = ["futures-io", "zstd"]}
 
 [dev-dependencies]
 matches = "0.1.8"
