--- a/components/keys/Cargo.toml
+++ b/components/keys/Cargo.toml
@@ -6,7 +6,7 @@ publish = false
 
 [dependencies]
 byteorder = "1.2"
-kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_data_file_info_v2" }
+kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_merged_file_info" }
 log_wrappers = { path = "../log_wrappers" }
 thiserror = "1.0"
 tikv_alloc = { path = "../tikv_alloc" }
