--- a/components/raftstore/Cargo.toml
+++ b/components/raftstore/Cargo.toml
@@ -55,7 +55,7 @@ grpcio-health = { version = "0.10", default-features = false, features = ["proto
 into_other = { path = "../into_other", default-features = false }
 itertools = "0.10"
 keys = { path = "../keys", default-features = false }
-kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_data_file_info_v2" }
+kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_merged_file_info" }
 lazy_static = "1.3"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
 log_wrappers = { path = "../log_wrappers" }
