--- a/components/test_coprocessor/Cargo.toml
+++ b/components/test_coprocessor/Cargo.toml
@@ -25,7 +25,7 @@ collections = { path = "../collections" }
 concurrency_manager = { path = "../concurrency_manager", default-features = false }
 engine_rocks = { path = "../engine_rocks", default-features = false }
 futures = "0.3"
-kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_data_file_info_v2" }
+kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_merged_file_info" }
 protobuf = "2"
 resource_metering = { path = "../resource_metering" }
 test_storage = { path = "../test_storage", default-features = false }
