--- a/components/test_pd/Cargo.toml
+++ b/components/test_pd/Cargo.toml
@@ -9,7 +9,7 @@ collections = { path = "../collections" }
 fail = "0.5"
 futures = "0.3"
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
-kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_data_file_info_v2" }
+kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_merged_file_info" }
 pd_client = { path = "../pd_client", default-features = false }
 security = { path = "../security", default-features = false }
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
