--- a/components/test_storage/Cargo.toml
+++ b/components/test_storage/Cargo.toml
@@ -24,7 +24,7 @@ test-engines-panic = [
 api_version = { path = "../api_version" }
 collections = { path = "../collections" }
 futures = "0.3"
-kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_data_file_info_v2" }
+kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_merged_file_info" }
 pd_client = { path = "../pd_client", default-features = false }
 raftstore = { path = "../raftstore", default-features = false }
 test_raftstore = { path = "../test_raftstore", default-features = false }
