--- a/components/test_util/Cargo.toml
+++ b/components/test_util/Cargo.toml
@@ -16,7 +16,7 @@ collections = { path = "../collections" }
 encryption_export = { path = "../encryption/export", default-features = false }
 fail = "0.5"
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
-kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_data_file_info_v2" }
+kvproto = { git = "https://github.com/leavrth/kvproto.git", branch = "br_merged_file_info" }
 rand = "0.8"
 rand_isaac = "0.3"
 security = { path = "../security", default-features = false }
