--- a/etc/config-template.toml
+++ b/etc/config-template.toml
@@ -326,9 +326,7 @@
 
 ## Determine which types of IO operations are counted and restrained below threshold.
 ## Three different modes are: write-only, read-only, all-io.
-##
-## Only write-only mode is supported for now.
-# mode = "write-only"
+# mode = "all-io"
 
 [pd]
 ## PD endpoints.
